fixed checkbox image group aligning

--- a/src/components/shared/CheckboxImage/checkbox-image.scss
+++ b/src/components/shared/CheckboxImage/checkbox-image.scss
@@ -1,8 +1,13 @@
-input[type='checkbox'] {
-	display: none;
-	&:checked + label {
+.checkbox-image {
+	input[type='checkbox'] {
+		display: none;
+		&:checked + label {
+			img {
+				border: 1px solid white;
+			}
+		}
 		img {
-			border: 1px solid white;
+			padding: .5rem;
 		}
 	}
 }
