--- a/src/index.scss
+++ b/src/index.scss
@@ -124,3 +124,8 @@ header {
 		}
 	}
 }
+
+.is-24x20 {
+	width: 24px;
+	height: 20px;
+}
